tests/ui/issues/issue-69455.stderr
error[E0284]: type annotations needed
  --> $DIR/issue-69455.rs:29:26
   |
LL |     println!("{}", 23u64.test(xs.iter().sum()));
   |                          ^^^^
   |
   = note: cannot satisfy `<u64 as Test<_>>::Output == _`
help: try using a fully qualified path to specify the expected types
   |
LL |     println!("{}", <u64 as Test<Rhs>>::test(23u64, xs.iter().sum()));
   |                    +++++++++++++++++++++++++     ~

error[E0283]: type annotations needed
  --> $DIR/issue-69455.rs:29:26
   |
LL |     println!("{}", 23u64.test(xs.iter().sum()));
   |                          ^^^^ --------------- type must be known at this point
   |
note: multiple `impl`s satisfying `u64: Test<_>` found
  --> $DIR/issue-69455.rs:11:1
   |
LL | impl Test<u32> for u64 {
   | ^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Test<u64> for u64 {
   | ^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL |     println!("{}", <u64 as Test<Rhs>>::test(23u64, xs.iter().sum()));
   |                    +++++++++++++++++++++++++     ~

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0283, E0284.
For more information about an error, try `rustc --explain E0283`.
